Riorganizza sito in aree ospiti e proprietari

--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -9,7 +9,7 @@
 <body>
 <header class="site-header">
   <div class="container header-inner fade-in">
-    <a href="index.html" class="logo">
+    <a href="proprietari.html" class="logo">
       <img src="logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
       <div class="logo-text">
         <span class="logo-title">B&Brother’s</span>
@@ -17,18 +17,13 @@
       </div>
     </a>
     <nav class="main-nav">
-      <a href="index.html" class="nav-link">Home</a>
-        <a href="proprietari.html" class="nav-link">Per i proprietari</a>
-        <a href="ospiti.html" class="nav-link">Per gli ospiti</a>
-        <a href="alloggi.html" class="nav-link">Alloggi</a>
-        <a href="come-lavoriamo.html" class="nav-link">Come lavoriamo</a>
-        <a href="chi-siamo.html" class="nav-link nav-link-active">Chi siamo</a>
-        <a href="faq.html" class="nav-link">FAQ</a>
-        <a href="contatti.html" class="nav-link">Contatti</a>
-        <a href="login.html" class="nav-link">Area proprietari</a>
-        
+      <a href="proprietari.html" class="nav-link">Home proprietari</a>
+      <a href="proprietari.html#come-funziona" class="nav-link">Come funziona</a>
+      <a href="proprietari.html#servizi-proprietari" class="nav-link">Servizi</a>
+      <a href="proprietari.html#commissione" class="nav-link">Commissione</a>
+      <a href="contatti.html" class="nav-link">Contatti</a>
     </nav>
-    <a href="https://wa.me/393345071226" class="btn btn-whatsapp">WhatsApp</a>
+    <a href="ospiti.html" class="nav-link nav-link-ghost">Vuoi prenotare un soggiorno?</a>
   </div>
 </header>
 
@@ -39,7 +34,7 @@
     <p class="eyebrow">Chi siamo</p>
     <h1>Un contatto diretto, non un call center.</h1>
     <p class="page-hero-subtitle">
-      Dietro B&Brother’s c’è una gestione concreta e presente sul territorio: 
+      Dietro B&Brother’s c’è una gestione concreta e presente sul territorio:
       conosciamo Roma, i suoi quartieri e le esigenze di chi viaggia.
     </p>
   </div>
@@ -50,11 +45,11 @@
     <div class="fade-in delay-1">
       <h2>La nostra filosofia</h2>
       <p>
-        Crediamo in una gestione degli affitti brevi basata su numeri, trasparenza e relazione umana. 
+        Crediamo in una gestione degli affitti brevi basata su numeri, trasparenza e relazione umana.
         Ogni appartamento che prendiamo in carico viene trattato come se fosse il nostro.
       </p>
       <p>
-        Lavoriamo con un numero selezionato di proprietari proprio per garantire attenzione, 
+        Lavoriamo con un numero selezionato di proprietari proprio per garantire attenzione,
         tempi di risposta rapidi e un controllo costante della qualità.
       </p>
     </div>
