--- a/ospiti.html
+++ b/ospiti.html
@@ -2,14 +2,14 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <title>Servizi per gli ospiti – B&Brother’s</title>
+  <title>Area ospiti – B&Brother’s</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <header class="site-header">
   <div class="container header-inner fade-in">
-    <a href="index.html" class="logo">
+    <a href="ospiti.html" class="logo">
       <img src="logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
       <div class="logo-text">
         <span class="logo-title">B&Brother’s</span>
@@ -17,60 +17,141 @@
       </div>
     </a>
     <nav class="main-nav">
-      <a href="index.html" class="nav-link">Home</a>
-        <a href="proprietari.html" class="nav-link">Per i proprietari</a>
-        <a href="ospiti.html" class="nav-link nav-link-active">Per gli ospiti</a>
-        <a href="alloggi.html" class="nav-link">Alloggi</a>
-        <a href="come-lavoriamo.html" class="nav-link">Come lavoriamo</a>
-        <a href="chi-siamo.html" class="nav-link">Chi siamo</a>
-        <a href="faq.html" class="nav-link">FAQ</a>
-        <a href="contatti.html" class="nav-link">Contatti</a>
-        <a href="login.html" class="nav-link">Area proprietari</a>
-        
+      <a href="ospiti.html" class="nav-link nav-link-active">Home ospiti</a>
+      <a href="alloggi.html" class="nav-link">Tutti gli alloggi</a>
+      <a href="#come-funziona-ospiti" class="nav-link">Come funziona</a>
+      <a href="contatti.html" class="nav-link">Contatti</a>
     </nav>
-    <a href="https://wa.me/393345071226" class="btn btn-whatsapp">WhatsApp</a>
+    <a href="proprietari.html" class="nav-link nav-link-ghost">Sei un proprietario?</a>
   </div>
 </header>
 
 <main>
-
-<section class="page-hero">
-  <div class="container fade-in">
-    <p class="eyebrow">Per gli ospiti</p>
-    <h1>Alloggi curati, assistenza vera, Roma a portata di mano.</h1>
-    <p class="page-hero-subtitle">
-      Che tu sia a Roma per lavoro, studio o vacanza, trovi appartamenti selezionati e un contatto diretto per ogni esigenza.
-    </p>
-  </div>
-</section>
-
-<section class="section section-light">
-  <div class="container two-cols">
-    <div class="fade-in delay-1">
-      <h2>Cosa trovi in ogni alloggio</h2>
-      <ul class="check-list">
-        <li>Alloggi selezionati in quartieri strategici</li>
-        <li>Wi-Fi veloce per lavorare o guardare i tuoi contenuti preferiti</li>
-        <li>Letti perfettamente preparati con biancheria di qualità</li>
-        <li>Kit base di cortesia e cucina attrezzata (dove previsto)</li>
-      </ul>
-    </div>
-    <div class="fade-in delay-2">
-      <h2>Servizi per il tuo soggiorno</h2>
-      <ul class="check-list">
-        <li>Self check-in o accoglienza in persona, in base alla struttura</li>
-        <li>Assistenza via WhatsApp 7/7 durante il soggiorno</li>
-        <li>Consigli su ristoranti di zona e spostamenti</li>
-        <li>Supporto per esigenze particolari (famiglie, lavoro, orari particolari)</li>
-      </ul>
-      <div class="contact-highlight lift-on-hover">
-        <p>Hai bisogno di un alloggio per una data precisa?</p>
-        <a href="https://wa.me/393345071226" class="btn btn-primary btn-full">Scrivici su WhatsApp</a>
+  <section class="hero">
+    <div class="container hero-inner">
+      <div class="hero-text fade-in delay-1">
+        <p class="eyebrow">Area ospiti</p>
+        <h1>Alloggi selezionati a Roma, pronti per il tuo soggiorno.</h1>
+        <p class="hero-subtitle">
+          Appartamenti curati, Wi-Fi veloce e assistenza diretta via WhatsApp. Ti accogliamo come in hotel, con la libertà di una casa tutta per te.
+        </p>
+        <div class="hero-cta">
+          <a href="alloggi.html" class="btn btn-primary">Guarda tutti gli alloggi</a>
+          <a href="#servizi-ospiti" class="btn btn-ghost">Servizi inclusi</a>
+        </div>
+      </div>
+      <div class="hero-card fade-in delay-2 tilt-on-hover">
+        <h2>Supporto durante il soggiorno</h2>
+        <ul>
+          <li>Self check-in o accoglienza in persona</li>
+          <li>Assistenza via WhatsApp 7/7</li>
+          <li>Consigli su quartieri e spostamenti</li>
+        </ul>
+        <a href="https://wa.me/393345071226" class="hero-card-cta">Scrivici ora per la disponibilità →</a>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
+  <section class="section section-light" id="servizi-ospiti">
+    <div class="container two-cols">
+      <div class="fade-in delay-1">
+        <h2>Cosa trovi in ogni alloggio</h2>
+        <ul class="check-list">
+          <li>Alloggi selezionati in quartieri strategici</li>
+          <li>Wi-Fi veloce per lavorare o guardare i tuoi contenuti preferiti</li>
+          <li>Letti preparati con biancheria di qualità</li>
+          <li>Kit base di cortesia e cucina attrezzata (dove previsto)</li>
+        </ul>
+      </div>
+      <div class="fade-in delay-2">
+        <h2>Servizi per il tuo soggiorno</h2>
+        <ul class="check-list">
+          <li>Self check-in o accoglienza in persona, in base alla struttura</li>
+          <li>Assistenza via WhatsApp 7/7 durante il soggiorno</li>
+          <li>Supporto per famiglie, lavoro o esigenze particolari</li>
+          <li>Pulizia professionale a ogni cambio ospite</li>
+        </ul>
+        <div class="contact-highlight lift-on-hover">
+          <p>Hai bisogno di un alloggio per una data precisa?</p>
+          <a href="https://wa.me/393345071226" class="btn btn-primary btn-full">Scrivici su WhatsApp</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section section-alt" id="come-funziona-ospiti">
+    <div class="container">
+      <h2 class="section-title fade-in">Come funziona</h2>
+      <p class="section-subtitle fade-in delay-1">Dal primo messaggio al check-out, ti guidiamo passo passo.</p>
+      <div class="steps-layout">
+        <div class="step-block fade-in delay-1 lift-on-hover">
+          <h3>1. Scegli l’alloggio</h3>
+          <p>Consulta la lista aggiornata degli appartamenti e apri le schede con foto, servizi e zona.</p>
+        </div>
+        <div class="step-block fade-in delay-2 lift-on-hover">
+          <h3>2. Conferma le date</h3>
+          <p>Richiedi disponibilità via WhatsApp: ti rispondiamo rapidamente con preventivo e dettagli.</p>
+        </div>
+        <div class="step-block fade-in delay-3 lift-on-hover">
+          <h3>3. Check-in semplice</h3>
+          <p>Ricevi istruzioni di self check-in o vieni accolto di persona. Durante il soggiorno siamo sempre reperibili.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section section-light">
+    <div class="container">
+      <h2 class="section-title fade-in">I nostri alloggi</h2>
+      <p class="section-subtitle fade-in delay-1">
+        Un portfolio di appartamenti selezionati per vacanze, studio e lavoro. Apri le schede per vedere foto e dettagli.
+      </p>
+      <div class="cards-grid">
+        <article class="listing-card lift-on-hover fade-in delay-1">
+          <div class="listing-badge-row">
+            <span class="badge">Centro storico</span>
+            <span class="badge badge-strong">Fino a 4 ospiti</span>
+          </div>
+          <h3>Piazza Navona Luxury</h3>
+          <p>Elegante appartamento nel cuore di Roma con 2 camere matrimoniali e soggiorno con cucina attrezzata.</p>
+          <ul class="tags">
+            <li>Wi-Fi</li>
+            <li>AC</li>
+            <li>Smart check-in</li>
+          </ul>
+        </article>
+        <article class="listing-card lift-on-hover fade-in delay-2">
+          <div class="listing-badge-row">
+            <span class="badge">Trastevere</span>
+            <span class="badge badge-strong">Fino a 6 ospiti</span>
+          </div>
+          <h3>Trastevere Loft</h3>
+          <p>Loft su due livelli con 3 camere e terrazzo privato, perfetto per famiglie e gruppi di amici.</p>
+          <ul class="tags">
+            <li>Wi-Fi</li>
+            <li>AC</li>
+            <li>Self check-in</li>
+          </ul>
+        </article>
+        <article class="listing-card lift-on-hover fade-in delay-3">
+          <div class="listing-badge-row">
+            <span class="badge">San Pietro</span>
+            <span class="badge badge-strong">Fino a 2 ospiti</span>
+          </div>
+          <h3>San Pietro Cozy</h3>
+          <p>Bilocale curato a pochi minuti dal Vaticano, ideale per viaggi di coppia o lavoro.</p>
+          <ul class="tags">
+            <li>Wi-Fi</li>
+            <li>AC</li>
+            <li>Balcone</li>
+          </ul>
+        </article>
+      </div>
+      <div class="section-cta-center fade-in delay-3">
+        <a href="alloggi.html" class="btn btn-outline">Vedi tutti gli alloggi</a>
+      </div>
+    </div>
+  </section>
 </main>
 
 <footer class="site-footer">
@@ -79,6 +160,5 @@
     <p>WhatsApp: +39 334 507 1226 · Email: a.paolino0104@gmail.com</p>
   </div>
 </footer>
-
 </body>
 </html>
