--- a/property.html
+++ b/property.html
@@ -9,7 +9,7 @@
 <body>
 <header class="site-header">
   <div class="container header-inner fade-in">
-    <a href="index.html" class="logo">
+    <a href="ospiti.html" class="logo">
       <img src="logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
       <div class="logo-text">
         <span class="logo-title">B&Brother’s</span>
@@ -17,18 +17,12 @@
       </div>
     </a>
     <nav class="main-nav">
-      <a href="index.html" class="nav-link">Home</a>
-        <a href="proprietari.html" class="nav-link">Per i proprietari</a>
-        <a href="ospiti.html" class="nav-link">Per gli ospiti</a>
-        <a href="alloggi.html" class="nav-link nav-link-active">Alloggi</a>
-        <a href="come-lavoriamo.html" class="nav-link">Come lavoriamo</a>
-        <a href="chi-siamo.html" class="nav-link">Chi siamo</a>
-        <a href="faq.html" class="nav-link">FAQ</a>
-        <a href="contatti.html" class="nav-link">Contatti</a>
-        <a href="login.html" class="nav-link">Area proprietari</a>
-
+      <a href="ospiti.html" class="nav-link">Home ospiti</a>
+      <a href="alloggi.html" class="nav-link nav-link-active">Tutti gli alloggi</a>
+      <a href="ospiti.html#come-funziona-ospiti" class="nav-link">Come funziona</a>
+      <a href="contatti.html" class="nav-link">Contatti</a>
     </nav>
-    <a href="https://wa.me/393345071226" class="btn btn-whatsapp">WhatsApp</a>
+    <a href="proprietari.html" class="nav-link nav-link-ghost">Sei un proprietario?</a>
   </div>
 </header>
 
@@ -171,9 +165,9 @@
     fullEl.textContent = property.full_description || "Il proprietario non ha ancora inserito una descrizione completa.";
 
     metaEl.innerHTML = `
-      <span class="badge">${property.zone || "Roma"}</span>
-      <span class="badge badge-strong">${property.guests || "?"} ospiti</span>
-      <span class="badge">${property.status === "published" ? "Annuncio online" : "Bozza"}</span>
+      <span class=\"badge\">${property.zone || "Roma"}</span>
+      <span class=\"badge badge-strong\">${property.guests || "?"} ospiti</span>
+      <span class=\"badge\">${property.status === "published" ? "Annuncio online" : "Bozza"}</span>
     `;
 
     priceEl.textContent = property.base_price
