--- a/proprietari.html
+++ b/proprietari.html
@@ -2,14 +2,14 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <title>Servizi per i proprietari – B&Brother’s</title>
+  <title>Area proprietari – B&Brother’s</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <header class="site-header">
   <div class="container header-inner fade-in">
-    <a href="index.html" class="logo">
+    <a href="proprietari.html" class="logo">
       <img src="logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
       <div class="logo-text">
         <span class="logo-title">B&Brother’s</span>
@@ -17,63 +17,163 @@
       </div>
     </a>
     <nav class="main-nav">
-      <a href="index.html" class="nav-link">Home</a>
-        <a href="proprietari.html" class="nav-link nav-link-active">Per i proprietari</a>
-        <a href="ospiti.html" class="nav-link">Per gli ospiti</a>
-        <a href="alloggi.html" class="nav-link">Alloggi</a>
-        <a href="come-lavoriamo.html" class="nav-link">Come lavoriamo</a>
-        <a href="chi-siamo.html" class="nav-link">Chi siamo</a>
-        <a href="faq.html" class="nav-link">FAQ</a>
-        <a href="contatti.html" class="nav-link">Contatti</a>
-        <a href="login.html" class="nav-link">Area proprietari</a>
-        
+      <a href="proprietari.html" class="nav-link nav-link-active">Home proprietari</a>
+      <a href="#come-funziona" class="nav-link">Come funziona</a>
+      <a href="#servizi-proprietari" class="nav-link">Servizi</a>
+      <a href="#commissione" class="nav-link">Commissione</a>
+      <a href="contatti.html" class="nav-link">Contatti</a>
     </nav>
-    <a href="https://wa.me/393345071226" class="btn btn-whatsapp">WhatsApp</a>
+    <a href="ospiti.html" class="nav-link nav-link-ghost">Vuoi prenotare un soggiorno?</a>
   </div>
 </header>
 
 <main>
-
-<section class="page-hero">
-  <div class="container fade-in">
-    <p class="eyebrow">Per i proprietari</p>
-    <h1>Affida a noi la gestione, tieni per te la rendita.</h1>
-    <p class="page-hero-subtitle">
-      Ci occupiamo di tutto: dall’annuncio alla pulizia finale. Tu vedi i risultati mese per mese, con report chiari e trasparenti.
-    </p>
-  </div>
-</section>
-
-<section class="section section-light">
-  <div class="container two-cols">
-    <div class="fade-in delay-1">
-      <h2>Cosa facciamo per te</h2>
-      <ul class="check-list">
-        <li>Valutazione del potenziale di guadagno del tuo appartamento</li>
-        <li>Consigli su arredi, piccoli interventi e allestimento fotografico</li>
-        <li>Realizzazione e gestione degli annunci sui principali portali</li>
-        <li>Gestione prezzi dinamici, in base a domanda, stagione ed eventi</li>
-        <li>Filtraggio ospiti, check-in, check-out e assistenza durante il soggiorno</li>
-        <li>Coordinamento di pulizie e manutenzioni</li>
-      </ul>
-    </div>
-    <div class="fade-in delay-2">
-      <h2>I tuoi vantaggi</h2>
-      <ul class="check-list">
-        <li>Un unico referente per ogni aspetto dell’affitto breve</li>
-        <li>Zero tempo perso su messaggi, telefonate e problemi improvvisi</li>
-        <li>Casa sempre controllata e monitorata</li>
-        <li>Report con dati chiari sull’occupazione e sugli incassi</li>
-      </ul>
-      <div class="contact-highlight lift-on-hover">
-        <p class="small-label">Vuoi capire quanto può rendere il tuo immobile?</p>
-        <p><strong>Richiedi una valutazione gratuita</strong> e ti rispondiamo entro 24 ore lavorative.</p>
-        <a href="contatti.html" class="btn btn-primary btn-full">Richiedi valutazione</a>
+  <section class="hero">
+    <div class="container hero-inner">
+      <div class="hero-text fade-in delay-1">
+        <p class="eyebrow">Area proprietari</p>
+        <h1>Gestiamo il tuo immobile, tu incassi senza pensieri.</h1>
+        <p class="hero-subtitle">
+          Dalla valutazione del potenziale alla gestione operativa quotidiana: siamo il tuo referente unico a Roma per gli affitti brevi.
+        </p>
+        <div class="hero-cta">
+          <a href="contatti.html" class="btn btn-primary">Richiedi una valutazione gratuita</a>
+          <a href="#come-funziona" class="btn btn-ghost">Scopri come funziona</a>
+        </div>
+        <div class="hero-badges">
+          <span>Gestione completa</span>
+          <span>Prezzi dinamici</span>
+          <span>Report trasparenti</span>
+        </div>
+      </div>
+      <div class="hero-card fade-in delay-2 tilt-on-hover">
+        <h2>Perché B&Brother’s?</h2>
+        <ul>
+          <li>Strategia prezzi dinamici su più portali (OTA)</li>
+          <li>Comunicazione ospiti e check-in gestiti per te</li>
+          <li>Report mensili chiari e trasparenti</li>
+        </ul>
+        <a href="contatti.html" class="hero-card-cta">Parla direttamente con Alessio →</a>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
+  <section class="section section-light" id="come-funziona">
+    <div class="container two-cols">
+      <div class="fade-in delay-1">
+        <h2>Come funziona</h2>
+        <ul class="check-list">
+          <li>Sopralluogo e analisi del potenziale di guadagno</li>
+          <li>Preparazione casa: arredi, foto e annunci professionali</li>
+          <li>Pubblicazione su più portali con prezzi dinamici</li>
+          <li>Gestione ospiti, burocrazia, check-in e check-out</li>
+          <li>Report mensili e bonifici puntuali</li>
+        </ul>
+      </div>
+      <div class="fade-in delay-2">
+        <h2>Cosa facciamo per te</h2>
+        <ul class="check-list">
+          <li>Valutazione del potenziale di guadagno del tuo appartamento</li>
+          <li>Consigli su arredi, piccoli interventi e allestimento fotografico</li>
+          <li>Realizzazione e gestione degli annunci sui principali portali</li>
+          <li>Gestione prezzi dinamici, in base a domanda, stagione ed eventi</li>
+          <li>Filtraggio ospiti, check-in, check-out e assistenza durante il soggiorno</li>
+          <li>Coordinamento di pulizie e manutenzioni</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section class="section section-alt" id="servizi-proprietari">
+    <div class="container">
+      <h2 class="section-title fade-in">Servizi inclusi</h2>
+      <p class="section-subtitle fade-in delay-1">Tutto ciò che serve per valorizzare il tuo immobile e farlo rendere.</p>
+      <div class="steps-layout">
+        <div class="step-block fade-in delay-1 lift-on-hover">
+          <h3>Annuncio professionale</h3>
+          <p>Foto, copy e posizionamento dell’annuncio per emergere tra i competitor.</p>
+        </div>
+        <div class="step-block fade-in delay-2 lift-on-hover">
+          <h3>Tariffe dinamiche</h3>
+          <p>Strategia prezzi basata su domanda, stagione ed eventi per massimizzare l’occupazione.</p>
+        </div>
+        <div class="step-block fade-in delay-3 lift-on-hover">
+          <h3>Assistenza ospiti</h3>
+          <p>Gestione messaggi, check-in e check-out, supporto durante tutto il soggiorno.</p>
+        </div>
+        <div class="step-block fade-in delay-1 lift-on-hover">
+          <h3>Burocrazia semplificata</h3>
+          <p>Gestione pratiche come comunicazioni CIN, portali e adempimenti locali.</p>
+        </div>
+        <div class="step-block fade-in delay-2 lift-on-hover">
+          <h3>Manutenzione e pulizie</h3>
+          <p>Pulizie professionali e coordinamento interventi ordinari per mantenere alto lo standard.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section section-light" id="commissione">
+    <div class="container two-cols">
+      <div class="fade-in delay-1">
+        <h2>Commissione trasparente</h2>
+        <p>
+          Lavoriamo con una commissione % sulla rendita generata. Sei sempre aggiornato su occupazione, incassi e costi operativi grazie ai report periodici.
+        </p>
+        <p>
+          Nessun canone fisso: solo quando l’alloggio produce, guadagni tu e guadagniamo anche noi.
+        </p>
+      </div>
+      <div class="fade-in delay-2">
+        <h2>Occupazione media degli alloggi</h2>
+        <p>
+          Negli ultimi 12 mesi i nostri alloggi hanno registrato un’occupazione media dell’<strong>81%</strong>.
+          Solo il <strong>19%</strong> delle date è rimasto libero: lavoriamo in modo mirato su prezzi, visibilità e qualità dell’esperienza per gli ospiti.
+        </p>
+        <div class="kpi-chart">
+          <div class="kpi-ring">
+            <div class="kpi-ring-inner">
+              <span class="kpi-value">81%</span>
+              <span class="kpi-label">Occupazione media</span>
+            </div>
+          </div>
+          <div class="kpi-legend">
+            <div class="legend-item">
+              <span class="legend-dot legend-dot-main"></span>
+              <span>81% notti occupate</span>
+            </div>
+            <div class="legend-item">
+              <span class="legend-dot legend-dot-free"></span>
+              <span>19% date libere</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section section-alt">
+    <div class="container two-cols">
+      <div class="fade-in delay-1">
+        <h2>I tuoi vantaggi</h2>
+        <ul class="check-list">
+          <li>Un unico referente per ogni aspetto dell’affitto breve</li>
+          <li>Zero tempo perso su messaggi, telefonate e problemi improvvisi</li>
+          <li>Casa sempre controllata e monitorata</li>
+          <li>Report con dati chiari sull’occupazione e sugli incassi</li>
+        </ul>
+      </div>
+      <div class="fade-in delay-2">
+        <h2>Richiedi una valutazione gratuita</h2>
+        <p class="small-label">Vuoi capire quanto può rendere il tuo immobile?</p>
+        <p>Scrivici i dettagli della casa: zona, metratura, posti letto e foto. Ti rispondiamo entro 24 ore lavorative.</p>
+        <div class="hero-cta">
+          <a href="contatti.html" class="btn btn-primary">Parla con noi</a>
+          <a href="https://wa.me/393345071226" class="btn btn-ghost">Scrivici su WhatsApp</a>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 
 <footer class="site-footer">
@@ -82,6 +182,5 @@
     <p>WhatsApp: +39 334 507 1226 · Email: a.paolino0104@gmail.com</p>
   </div>
 </footer>
-
 </body>
 </html>
