--- a/index.html
+++ b/index.html
@@ -17,181 +17,81 @@
       </div>
     </a>
     <nav class="main-nav">
-      <a href="index.html" class="nav-link nav-link-active">Home</a>
-        <a href="proprietari.html" class="nav-link">Per i proprietari</a>
-        <a href="ospiti.html" class="nav-link">Per gli ospiti</a>
-        <a href="alloggi.html" class="nav-link">Alloggi</a>
-        <a href="come-lavoriamo.html" class="nav-link">Come lavoriamo</a>
-        <a href="chi-siamo.html" class="nav-link">Chi siamo</a>
-        <a href="faq.html" class="nav-link">FAQ</a>
-        <a href="contatti.html" class="nav-link">Contatti</a>
-        <a href="login.html" class="nav-link">Area proprietari</a>
-        
+      <a href="ospiti.html" class="nav-link">Area ospiti</a>
+      <a href="proprietari.html" class="nav-link">Area proprietari</a>
+      <a href="contatti.html" class="nav-link">Contatti</a>
     </nav>
     <a href="https://wa.me/393345071226" class="btn btn-whatsapp">WhatsApp</a>
   </div>
 </header>
 
 <main>
-
-<section class="hero">
-  <div class="container hero-inner">
-    <div class="hero-text fade-in delay-1">
-      <p class="eyebrow">Affitti brevi · Roma</p>
-      <h1>Gestione completa dei tuoi affitti brevi, senza pensieri.</h1>
-      <p class="hero-subtitle">
-        B&Brother’s trasforma il tuo appartamento in una rendita costante. 
-        Ci occupiamo noi di annunci, ospiti e burocrazia. Tu controlli i risultati, incassi e ti rilassi.
-      </p>
-      <div class="hero-cta">
-        <a href="proprietari.html" class="btn btn-primary">Sono un proprietario</a>
-        <a href="alloggi.html" class="btn btn-ghost">Cerco un alloggio</a>
+  <section class="hero">
+    <div class="container hero-inner">
+      <div class="hero-text fade-in delay-1">
+        <p class="eyebrow">Affitti brevi · Roma</p>
+        <h1>Gestione completa per affitti brevi a Roma.</h1>
+        <p class="hero-subtitle">
+          Scegli come vuoi vivere l’esperienza B&Brother’s: prenota un soggiorno da ospite o affida a noi la gestione del tuo immobile.
+        </p>
       </div>
-      <div class="hero-badges">
-        <span>Gestione completa</span>
-        <span>Massima occupazione</span>
-        <span>Zero pensieri</span>
-      </div>
-    </div>
-    <div class="hero-card fade-in delay-2 tilt-on-hover">
-      <h2>Perché B&Brother’s?</h2>
-      <ul>
-        <li>Strategia prezzi dinamici su più portali (OTA)</li>
-        <li>Comunicazione ospiti e check-in gestiti per te</li>
-        <li>Report mensili chiari e trasparenti</li>
-      </ul>
-      <a href="contatti.html" class="hero-card-cta">Parla direttamente con Alessio →</a>
-    </div>
-  </div>
-</section>
-
-<section class="section section-light">
-  <div class="container two-cols">
-    <div class="fade-in delay-1">
-      <h2>Per i proprietari</h2>
-      <p>
-        Sei stanco di gestire messaggi, pulizie, check-in e problemi all’ultimo minuto?
-        Con B&Brother’s hai un unico referente che si occupa di tutto. 
-        Tu mantieni il controllo sull’immobile, noi pensiamo alla gestione operativa.
-      </p>
-      <ul class="check-list">
-        <li>Valutazione gratuita del potenziale del tuo immobile</li>
-        <li>Consulenza su arredi e set-up fotografico</li>
-        <li>Pubblicazione annunci e ottimizzazione costante</li>
-        <li>Gestione prezzi basata sui dati, non a caso</li>
-      </ul>
-      <a href="proprietari.html" class="link-arrow">Scopri il servizio proprietari</a>
-    </div>
-    <div class="fade-in delay-2">
-      <h2>Per gli ospiti</h2>
-      <p>
-        Appartamenti selezionati in quartieri strategici di Roma, ideali per lavoro, studio o vacanza.
-        Pulizia professionale, Wi-Fi veloce e assistenza dedicata: l’esperienza di un hotel, 
-        con la libertà di una casa tutta per te.
-      </p>
-      <ul class="check-list">
-        <li>Self check-in o accoglienza personalizzata</li>
-        <li>Alloggi curati nei dettagli</li>
-        <li>Supporto 7/7 via WhatsApp</li>
-      </ul>
-      <a href="ospiti.html" class="link-arrow">Scopri i servizi per gli ospiti</a>
-    </div>
-  </div>
-</section>
-
-<section class="section section-alt">
-  <div class="container metrics-section">
-    <div class="metrics-text fade-in delay-1">
-      <h2>Occupazione media dei nostri alloggi</h2>
-      <p>
-        Negli ultimi 12 mesi i nostri alloggi hanno registrato un’occupazione media dell’<strong>81%</strong>. 
-        Solo il <strong>19%</strong> delle date è rimasto libero: un dato che racconta quanto lavoriamo in modo mirato su prezzi, 
-        visibilità e qualità dell’esperienza per gli ospiti.
-      </p>
-    </div>
-    <div class="kpi-chart fade-in delay-2">
-      <div class="kpi-ring">
-        <div class="kpi-ring-inner">
-          <span class="kpi-value">81%</span>
-          <span class="kpi-label">Occupazione media</span>
-        </div>
-      </div>
-      <div class="kpi-legend">
-        <div class="legend-item">
-          <span class="legend-dot legend-dot-main"></span>
-          <span>81% notti occupate</span>
-        </div>
-        <div class="legend-item">
-          <span class="legend-dot legend-dot-free"></span>
-          <span>19% date libere</span>
+      <div class="hero-card fade-in delay-2 tilt-on-hover">
+        <h2>Di cosa hai bisogno?</h2>
+        <p>Seleziona l’area più adatta: trovi contenuti dedicati a chi viaggia e a chi desidera delegare la gestione degli affitti.</p>
+        <div class="hero-badges">
+          <span>Risposte rapide</span>
+          <span>Team locale</span>
+          <span>Assistenza dedicata</span>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section class="section section-light">
-  <div class="container">
-    <h2 class="section-title fade-in">I nostri alloggi</h2>
-    <p class="section-subtitle fade-in delay-1">
-      Un portfolio di appartamenti selezionati, in continuo aggiornamento: soluzioni perfette per 
-      coppie, famiglie e viaggi di lavoro.
-    </p>
-    <div class="cards-grid">
-      <article class="listing-card lift-on-hover fade-in delay-1">
+  <section class="section section-light">
+    <div class="container cards-grid">
+      <article class="listing-card role-card lift-on-hover fade-in delay-1">
         <div class="listing-badge-row">
-          <span class="badge">Centro storico</span>
-          <span class="badge badge-strong">Fino a 4 ospiti</span>
+          <span class="badge">Viaggiatori</span>
         </div>
-        <h3>Piazza Navona Luxury</h3>
-        <p>Elegante appartamento nel cuore di Roma: 2 camere matrimoniali, soggiorno con cucina attrezzata.</p>
-        <ul class="tags">
-          <li>Wi-Fi</li>
-          <li>AC</li>
-          <li>Smart check-in</li>
-        </ul>
+        <h2>sono un ospite</h2>
+        <p>Voglio cercare un alloggio, vedere foto, servizi e disponibilità per il mio soggiorno a Roma.</p>
+        <div class="tags">
+          <span>Appartamenti curati</span>
+          <span>Self check-in</span>
+          <span>Assistenza 7/7</span>
+        </div>
+        <a href="ospiti.html" class="btn btn-primary btn-full">Vai all’area ospiti</a>
       </article>
-      <article class="listing-card lift-on-hover fade-in delay-2">
+
+      <article class="listing-card role-card lift-on-hover fade-in delay-2">
         <div class="listing-badge-row">
-          <span class="badge">Trastevere</span>
-          <span class="badge badge-strong">Fino a 6 ospiti</span>
+          <span class="badge badge-strong">Proprietari</span>
         </div>
-        <h3>Trastevere Loft</h3>
-        <p>Loft su due livelli con 3 camere e terrazzo privato, perfetto per famiglie e gruppi di amici.</p>
-        <ul class="tags">
-          <li>Wi-Fi</li>
-          <li>AC</li>
-          <li>Self check-in</li>
-        </ul>
-      </article>
-      <article class="listing-card lift-on-hover fade-in delay-3">
-        <div class="listing-badge-row">
-          <span class="badge">San Pietro</span>
-          <span class="badge badge-strong">Fino a 2 ospiti</span>
+        <h2>sono un proprietario</h2>
+        <p>Voglio scoprire come far gestire il mio immobile, pubblicare annunci e guadagnare senza pensieri.</p>
+        <div class="tags">
+          <span>Gestione completa</span>
+          <span>Prezzi dinamici</span>
+          <span>Report chiari</span>
         </div>
-        <h3>San Pietro Cozy</h3>
-        <p>Bilocale curato a pochi minuti dal Vaticano, ideale per viaggi di coppia o lavoro.</p>
-        <ul class="tags">
-          <li>Wi-Fi</li>
-          <li>AC</li>
-          <li>Balcone</li>
-        </ul>
+        <a href="proprietari.html" class="btn btn-outline btn-full">Vai all’area proprietari</a>
       </article>
     </div>
-    <div class="section-cta-center fade-in delay-3">
-      <a href="alloggi.html" class="btn btn-outline">Vedi tutti gli alloggi</a>
-    </div>
-  </div>
-</section>
-
+  </section>
 </main>
 
 <footer class="site-footer">
   <div class="container footer-inner">
-    <p>© 2025 B&Brother’s – Gestione Affitti Brevi a Roma. Tutti i diritti riservati.</p>
-    <p>WhatsApp: +39 334 507 1226 · Email: a.paolino0104@gmail.com</p>
+    <div>
+      <p>© 2025 B&Brother’s – Gestione Affitti Brevi a Roma. Tutti i diritti riservati.</p>
+      <p>WhatsApp: +39 334 507 1226 · Email: a.paolino0104@gmail.com</p>
+    </div>
+    <div class="footer-links">
+      <a href="#">Privacy</a>
+      <a href="#">Cookie</a>
+      <a href="contatti.html">Contatti</a>
+    </div>
   </div>
 </footer>
-
 </body>
 </html>
